samples/_failures_safe/1761084942_846c32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4779544.c: In function ‘main’:
./samples/SAFE/__tmp_b4779544.c:124:5: error: expected expression at end of input
  124 |     if (
      |     ^~
./samples/SAFE/__tmp_b4779544.c:124:5: error: expected declaration or statement at end of input
